force-app/main/default/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings General</fullName>
                </value>
                <value>
                    <fullName>Savings Minor</fullName>
                </value>
                <value>
                    <fullName>savings Senior</fullName>
                </value>
                <value>
                    <fullName>Current General</fullName>
                </value>
                <value>
                    <fullName>Current Forex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Initial_Balance__c</fullName>
        <label>Initial Balance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registered_Date__c</fullName>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trading_Limit__c</fullName>
        <label>Trading Limit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Email__c</columns>
        <columns>Initial_Balance__c</columns>
        <columns>Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Trading_Limit__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Bank Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account</pluralLabel>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <label>Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>